--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,6 +7,9 @@
         <%= render 'shared/user_info' %>
       </section>
       <section>
+        <%= render 'shared/stats' %>
+      </section>
+      <section>
         <%= render 'shared/micropost_form' %>
       </section>
     </aside>
@@ -15,6 +18,7 @@
       <%= render 'shared/feed' %>
     </div>
   </div>
+
 <% else %>
   <div class="center hero-unit">
     <h1>Welcome to the Sample App</h1>
